<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MovieDetailsActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingRight="10dp"
            android:paddingLeft="10dp">

            <TextView
                android:id="@+id/tv_movie_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:gravity="center"
                android:textSize="25sp"
                android:background="@color/colorPrimaryDark"
                android:padding="40dp"/>

            <TextView
                android:id="@+id/tv_name_original_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_movie_title"
                android:layout_toEndOf="@+id/iv_poster_thumbnail"
                android:layout_toRightOf="@id/iv_poster_thumbnail"
                android:text="@string/original_title"
                android:textStyle="bold"
                android:layout_margin="2dp"/>

            <TextView
                android:id="@+id/tv_original_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_movie_title"
                android:layout_toRightOf="@id/tv_name_original_title"
                android:layout_toEndOf="@id/tv_name_original_title"
                android:layout_margin="2dp"/>

            <ImageView
                android:id="@+id/iv_poster_thumbnail"
                android:contentDescription="@string/content_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scaleType="centerCrop"
                android:layout_margin="2dp"
                android:layout_below="@+id/tv_movie_title"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"/>

            <TextView
                android:id="@+id/tv_name_release_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_original_title"
                android:layout_toRightOf="@id/iv_poster_thumbnail"
                android:layout_toEndOf="@id/iv_poster_thumbnail"
                android:text="@string/release_date"
                android:layout_margin="2dp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/tv_release_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/tv_name_release_date"
                android:layout_toEndOf="@id/tv_name_release_date"
                android:layout_margin="2dp"
                android:layout_below="@id/tv_original_title" />

            <TextView
                android:id="@+id/tv_name_overview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/overview"
                android:layout_below="@id/iv_poster_thumbnail"
                android:layout_margin="2dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/tv_overview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:layout_below="@id/tv_name_overview"/>

            <TextView
                android:id="@+id/tv_name_vote_average"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_name_release_date"
                android:layout_margin="2dp"
                android:layout_toRightOf="@id/iv_poster_thumbnail"
                android:layout_toEndOf="@id/iv_poster_thumbnail"
                android:text="@string/user_rating"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/tv_vote_average"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_release_date"
                android:layout_margin="2dp"
                android:layout_toRightOf="@id/tv_name_vote_average"
                android:layout_toEndOf="@id/tv_name_vote_average"/>

        </RelativeLayout>

    </ScrollView>

</LinearLayout>